--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>One Hour Website</title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico?">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
 </head>
 <body>
     
