--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
                 </ol>
                 <p>Navigate back to the Pages section of settings. Now you should see a banner at the top of the page with the link to your live website.</p>
                 <img src="img/pages_banner.png" alt="" />
+                <p>You can make changes to <i>index.html</i> and reupload it whenever you want. Or you can make changes directly in the file in the browser and save them by making a new commit. GitHub Actions will update your live site with those changes in only a few minutes.</p>
                 <p>In the next section you will learn another way to share your static websites: hosting directly in the cloud.</p>
             </section>
         </div>
