--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </aside>
     <main> 
         <section id="intro-section" aria-label="Introduction">
-            <p>Have you ever wanted to create and host your own website? Starting from scratch can be confusing even when you already know a little HTML and CSS. Lot of companies can help create complex blogs and shopping sites, but sometimes you just need something simple.</p>
+            <p>Have you ever wanted to create and host your own website? Starting from scratch can be confusing even when you already know a little HTML and CSS. Lots of companies can help create complex blogs and shopping sites, but sometimes you just need something simple.</p>
             <p>There’s an easier way to create a website at a fraction of the cost – a static webpage. In this tutorial we will create a webpage from scratch, then learn two cost-effective ways of hosting this content. You'll get a high-level view of how content is delivered over the internet, plus a great way to host your own portfolio, personal site or (almost) anything you can imagine.</p>
             <div class="row" id="show-me-row">
                 <b>Show me everything</b>
@@ -51,7 +51,7 @@
             <section class="info-section">
                     <p>Most websites on the internet live on a <a href="https://en.wikipedia.org/wiki/Server_(computing)" target="_blank">server</a> – a fancy word for a computer that can be accessed from the public internet. But there’s another kind of website – a <a href="https://en.wikipedia.org/wiki/Static_web_page" target="_blank">static website</a> – that is much more basic. </p>
                     <p>Static websites don’t need to be run (or hosted) on servers like traditional websites. The code for these websites runs completely in your browser. Since they don’t talk to databases, they can be stored in something called <a href="https://en.wikipedia.org/wiki/Object_storage" target="_blank">object (or <i>blob</i>) storage</a>.</p>
-                    <p>Internet users can access static sites more quickly then server based sites. Plus, not needing a server makes these sites significantly cheaper.</p>
+                    <p>Internet users can access static sites faster than server based sites. Plus, not needing a server makes these sites significantly cheaper.</p>
             </section>
             <h4 id="why-a-static-website"><i class="fa fa-info-circle"></i>Why would I want a static website?<button class="invisible-button section-close-button"><i class="fa fa-chevron-down"></i></button></h4>
             <section class="info-section">
@@ -66,7 +66,7 @@
             <h4 id="write-your-own-html"><i class="fa fa-info-circle"></i>Writing your own HTML<button class="invisible-button section-close-button"><i class="fa fa-chevron-down"></i></button></h4>
             <section class="info-section">
                 <p>When you visit a webpage you're really visiting a file (or group of files) stored on a different computer. Special software on the server makes that file findable by people browsing on the internet.  These files contain everything needed to display the page – text, styles, images and code to load other resources.</p>
-                <p>The one file every webpage must have is an HTML file. This is a standard filetype, like .doc or .jpg. When your browser (like Chrome, Firefox or Edge) recieves an HTML file over the internet, it translates the code in the HTML file (and all it's linked files) into the text, styling and actions you see on your screen.</p>
+                <p>The one file every webpage must have is an HTML file. This is a standard filetype, like .doc or .jpg. When your browser (like Chrome, Firefox or Edge) recieves an HTML file over the internet, it translates the code in the HTML file (and all its linked files) into the text, styling and actions you see on your screen.</p>
                 <p>Web developers use <a href="https://www.codecademy.com/resources/blog/popular-ides-and-code-editors/" target="_blank">special programs</a> to create and edit their code – but HTML files are just text documents. They can be created in any text editor, but some add additional formatting that can interfere with the code. Simpler text editors are usually better.</p>
             </section>
             <h4 id="the-simplest-webpage"><i class="fa fa-info-circle"></i>The simplest possible web page<button class="invisible-button section-close-button"><i class="fa fa-chevron-down"></i></button></h4>
@@ -210,7 +210,7 @@
             <section class="info-section">
                 <p>Put very simply: the Cloud is a huge number of tightly networked computers (servers) all around the world. This network lets us quickly share content worldwide, process data more efficiently and instantly deploy new resources. Since computing resources are shared, it can also mean big cost saving for certain projects.</p>
                 <p>There are several different Clouds (like <a href="cloud.google.com" target="_blank">Google Cloud</a> and <a href="azure.microsoft.com">Microsoft Azure</a>) that all offer similar functionality. I’m using Amazon Web Services (AWS) in this tutorial since it's the simplest for beginners, but similar concepts should apply to any Cloud Provider.</p>
-                <p>All cloud providers work on a “pay-as-you-go” model, meaning you will only pay for resources you actually use. It also means you need to be careful to watch you're spending – we'll learn an easy way to create budget alerts for AWS in a later section.</p>
+                <p>All Cloud Providers work on a “pay-as-you-go” model, meaning you will only pay for resources you actually use. It also means you need to be careful to watch you're spending – we'll learn an easy way to create budget alerts for AWS in a later section.</p>
             </section>
             <h4><i class="fa fa-info-circle"></i>What is the AWS Free Tier?<button class="invisible-button section-close-button"><i class="fa fa-chevron-down"></i></button></h4>
             <section class="info-section">
@@ -297,7 +297,7 @@
             <h4><i class="fa fa-info-circle"></i>What is a custom domain name?<button class="invisible-button section-close-button"><i class="fa fa-chevron-down"></i></button></h4>
             <section class="info-section">
                 <p>You probably noticed the name for your website is a little hard to remember. That’s because S3 generates this name automatically by combining the name of the bucket with the region it was created in.</p>
-                <p>Everything on the internet, including your website, is identifiable by a string of unique numbers called an Internet Protocol (IP) address. IP addresses make sending things to the right device possible – but they aren’t particularly easy to remember or use, however.</p>
+                <p>Everything on the internet, including your website, is identifiable by a string of unique numbers called an Internet Protocol (IP) address. IP addresses make sending things to the right device possible – but aren’t particularly easy to remember or use.</p>
                 <p>Browsers let us find websites using their Domain Name – something like amazon.com, mit.edu or whitehouse.gov. The <a href="https://www.cloudflare.com/learning/dns/what-is-dns/" target="_blank"> Domain Name System (DNS)</a> uses special servers called Nameservers to <i>resolve</i> Domain Names to their IP addresses and direct traffic to the correct site.  </p>
                 <p>There are only so many of these names available for a given <i>domain</i> (the last part of the domain name after the period, like .com and .edu) and you need permission to use certain domains. An organization called <a href="www.icann.org">ICANN</a> manages the ownership and expiration of Domain Names, but you don’t buy names through them directly. Instead, Domain Names are purchased through a registration service.</p>
             </section>
